Added the long-run tier to the exploration benchmark
The review note wanted runs of two to five minutes once the rule-application
leak (3.11, gh #919) was fixed: they average out collector and JIT noise
better than repetitions of short runs, and they are where the findings whose
cost scales with the wrong quantity show. The smoke flag on Config became a
three-valued Tier (SMOKE within QUICK, LONG apart), selected without names
through -Dgroove.bench.tier; the default stays the quick tier, so the plain
run gets shorter rather than longer, since the three rows that were already
long-tier sized (append-4-list-10, pacman-four-ghosts, leader-election-18)
leave it. The tier is meant to run at -Xmx8g with one warm-up, two runs and
one row per JVM, which sidesteps the run-order effect and lets a row that
does not fit fail alone.

Twelve candidates were calibrated on the desktop (table in the note). Four
new long rows: car-platooning start-06 (3M states), the unstored binary
tree at depth 10 (44M discovered states; the note's 140 s for depth 9 was a
laptop figure, here it is 14 s), Mark-Unmark tree-22 (tree-23 is a different
shape and smaller than tree-21) and the counter at 600k, whose allocation is
now superlinear at a third point (2.3 MB per state). Three candidates were
the wrong size for the long tier but useful in the quick one (As-and-Bs under
equality collapse, sierpinsky start12, the unstored tree at depth 9); four
were dropped (sierpinsky start13 and inheritance start-13 fall between the
tiers with over 3 GB retained, As-and-Bs start-4-3 under equality and the
counter at a million do not fit 8 GB).

The BigInteger counter rows that waited for gh #923 come along: the harness
now hands its fresh GrammarModel to ExploreType.newGTS, which compiles the
grammar under the type's algebra override, instead of compiling the model
itself and building the GTS directly, which the fixed key rejects. BigInteger
turns out to cost nothing extra on the counter (6.4 s against 7.3 s p